After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598590 - [Moblin] Prevent crash on removal of last device
[Moblin] Prevent crash on removal of last device
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: moblin
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-10-15 16:44 UTC by Joshua Lock
Modified: 2009-10-15 22:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[Moblin] Prevent crash on removal of last device (2.03 KB, patch)
2009-10-15 16:44 UTC, Joshua Lock
committed Details | Review

Description Joshua Lock 2009-10-15 16:44:21 UTC
Calling gtk_tree_model_get with an uninitialised iter causes an assertion.
Test the return value of gtk_tree_model_get_iter_first to verify whether we
should try to get and data from the model.
Comment 1 Joshua Lock 2009-10-15 16:44:23 UTC
Created attachment 145536 [details] [review]
[Moblin] Prevent crash on removal of last device