Prevent crash on removal of last device

Calling gtk_tree_model_get with an uninitialised iter causes an assertion.
Test the return value of gtk_tree_model_get_iter_first to verify whether we
should try to get and data from the model.

https://bugzilla.gnome.org/show_bug.cgi?id=598590